# should-i

./: Cargo.toml  README.md  should-i.rb
.github/workflows/: ci.yml
src/: main.rs
