[package]
name = "should-i"
version = "0.1.2"
edition = "2021"
authors = ["Justhiro55"]
description = "A CLI tool to help you make decisions by consulting the yesno.wtf API"
readme = "README.md"
homepage = "https://github.com/Justhiro55/should-i"
repository = "https://github.com/Justhiro55/should-i"
license = "MIT OR Apache-2.0"
keywords = ["cli", "decision", "yes-no", "yesno", "random"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.41", features = ["full"] }
webbrowser = "1.0"
anyhow = "1.0"
